# Parser

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  parser-config.cmake
src/Parser/: CMakeLists.txt  DataLayer.hpp  Global.hpp
